public_html/profiles/os2sub/themes/custom/site_fic/src/scss/custom/components/_fic-header-banners.scss
/* ... */
.scroll-down {

  &-link {
    text-align: center;
    display: none;
    padding: 50px 0;

    .page-taxonomy-term & {
      display: block;
    }

    span {
      display: inline-block;
      height: 60px;
      width: 60px;
      background-image: url('../img/lookdown.png');
      background-repeat: no-repeat;
      transition: opacity 0.3s;
    }
    span:hover {
      opacity: 0.5;
    }
  }
}

.not-front.page-taxonomy {
  .view-mode-fic_header {
    > .cycle-slideshow-wrapper {
      display: flex;
      height: 0 !important;
      align-items: center;
      width: 100%;

      .cycle-slideshow {
        display: flex;
        justify-content: center;
        width: 100% !important;

        .cycle-slide {
          background-color: transparent !important;
          width: 100%
        }

      }
    }
  }
}

.term-fic-header {

  .num-slides {

    &-3 .views-slideshow-controls-bottom a {
      width: $desktop-width-2buttons;
    }

    &-4 .views-slideshow-controls-bottom a {
      width: $desktop-width-3buttons;
    }

    &-5 .views-slideshow-controls-bottom a {
      width: $desktop-width-4buttons;
    }

    &-6 .views-slideshow-controls-bottom a {
      width: $desktop-width-5buttons;
    }

    &-7 .views-slideshow-controls-bottom a {
      width: $desktop-width-6buttons;
    }
  }

  .num-items {

    &-3 a {
      width: $desktop-width-2buttons;
    }

    &-4 a {
      width: $desktop-width-3buttons;
    }

    &-5 a {
      width: $desktop-width-4buttons;
    }

    &-6 a {
      width: $desktop-width-5buttons;
    }

    &-7 a {
      width: $desktop-width-6buttons;
    }
  }
}

.node-type-os2web-base-contentpage {

  .backstretched & .page-header-wrapper {
    margin-bottom: 30px;
  }

  .term-fic-header {

    .slide-bottom {
      bottom: -30px;
    }
  }

  .slide-content-wrapper {
    margin: 30px 0 110px;
  }
}

// --------------------------------------------------
// Variants
// --------------------------------------------------

// --------------------------------------------------
// Responsive
// --------------------------------------------------

// Mobile - and up
@include media-breakpoint-up(xs) {}

// Mobile - only
@include media-breakpoint-only(xs) {

  .term-fic-header {

    .cycle-pager,
    .views-slideshow-pager-fields {
      display: block !important;

      div {
        display: block;
      }

      > div {
        display: inline-block;

        margin: 0 0 10px 0 !important;
        padding: 0;

        width: 50%;

        > a {
          display: block;

          width: auto !important;
        }

        &:nth-child(even) {

          > a,
          > div {
            margin-right: 2.5px;
          }
        }

        &:nth-child(odd) {

          > a,
          > div {
            margin-left: 2.5px;
          }
        }
      }
    }

    .slide-content-wrapper {

      .field-name-description-field,
      .field-name-field-os2web-base-field-summary {
        font-size: 2.5em;
        line-height: 1em;

        padding-top: 40px;
        padding-bottom: 40px;
      }
    }

    .views_slideshow_main {
      height: auto !important;

      margin-top: 110px !important;
      margin-bottom: 110px !important;
    }

    .views_slideshow_cycle_slide {
      width: 100% !important;
    }

    .views-slideshow-controls-bottom,
    .field-name-field-os2web-base-field-related,
    .cycle-pager {

      > div {
        margin-bottom: 0;
      }
    }

    .slide-bottom {
      top: 100%;
      bottom: auto;

      .blue-block {
        min-height: auto;
      }

      div {

        &:nth-child(even) {
          padding-left: 2.5px;
        }

        &:nth-child(odd) {
          padding-right: 2.5px;
        }
      }

      .text {
        font-size: 1.7em;
        line-height: 1em;
      }
    }

    .contact.modal-link {
      font-size: 1.7em;
      line-height: 1em;
    }

    .num-slides {

      &-3 .views-slideshow-controls-bottom a,
      &-4 .views-slideshow-controls-bottom a,
      &-5 .views-slideshow-controls-bottom a,
      &-6 .views-slideshow-controls-bottom a,
      &-7 .views-slideshow-controls-bottom a {
        width: 100%;
      }
    }

    .num-items {

      &-3 a,
      &-4 a,
      &-5 a,
      &-6 a,
      &-7 a {
        width: 100%;
      }
    }
  }

  .scroll-down-wrapper {
    height: 90px;

    margin: 0;

    .scroll-down-link {
      display: none;
    }
  }
}

// Tablet - and up
@include media-breakpoint-up(sm) {}
/* ... */

